// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > it works with defaults 1`] = `
<div
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6 _this_307da9"
  data-testid="Tabs"
>
  <ul
    class="_this_6f2e26 _elevation-large_6f2e26 _roundness-small_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_307da9"
    data-testid="Tabs-list"
  >
    <li
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-small_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
      data-testid="Tabs-item"
    >
      <a
        class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _link_307da9"
        data-testid="Tabs-link"
        href="#tab1"
      >
        <span
          class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
          data-testid="Link-inner"
        >
          <div
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
            data-testid="Box"
          >
            Tab1
          </div>
        </span>
      </a>
    </li>
    <li
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-small_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
      data-testid="Tabs-item"
    >
      <a
        class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _link_307da9"
        data-testid="Tabs-link"
        href="#tab2"
      >
        <span
          class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
          data-testid="Link-inner"
        >
          <div
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
            data-testid="Box"
          >
            Tab2
          </div>
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Tabs > it works with sizes 1`] = `
<div
  class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6 _this_307da9"
  data-testid="Tabs"
>
  <ul
    class="_this_6f2e26 _elevation-large_6f2e26 _roundness-small_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_307da9"
    data-testid="Tabs-list"
  >
    <li
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-small_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
      data-testid="Tabs-item"
    >
      <a
        class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _link_307da9"
        data-testid="Tabs-link"
        href="#tab1"
      >
        <span
          class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
          data-testid="Link-inner"
        >
          <div
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
            data-testid="Box"
          >
            Tab1
          </div>
        </span>
      </a>
    </li>
    <li
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-small_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
      data-testid="Tabs-item"
    >
      <a
        class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _link_307da9"
        data-testid="Tabs-link"
        href="#tab2"
      >
        <span
          class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
          data-testid="Link-inner"
        >
          <div
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
            data-testid="Box"
          >
            Tab2
          </div>
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Tabs > it works with sizes 2`] = `
<div
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6 _this_307da9"
  data-testid="Tabs"
>
  <ul
    class="_this_6f2e26 _elevation-large_6f2e26 _roundness-small_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_307da9"
    data-testid="Tabs-list"
  >
    <li
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-small_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
      data-testid="Tabs-item"
    >
      <a
        class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _link_307da9"
        data-testid="Tabs-link"
        href="#tab1"
      >
        <span
          class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
          data-testid="Link-inner"
        >
          <div
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
            data-testid="Box"
          >
            Tab1
          </div>
        </span>
      </a>
    </li>
    <li
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-small_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
      data-testid="Tabs-item"
    >
      <a
        class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _link_307da9"
        data-testid="Tabs-link"
        href="#tab2"
      >
        <span
          class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
          data-testid="Link-inner"
        >
          <div
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
            data-testid="Box"
          >
            Tab2
          </div>
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Tabs > it works with sizes 3`] = `
<div
  class="_this_d6c5f6 _size-large_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6 _this_307da9"
  data-testid="Tabs"
>
  <ul
    class="_this_6f2e26 _elevation-large_6f2e26 _roundness-small_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_307da9"
    data-testid="Tabs-list"
  >
    <li
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-small_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
      data-testid="Tabs-item"
    >
      <a
        class="_this_d6c5f6 _size-large_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _link_307da9"
        data-testid="Tabs-link"
        href="#tab1"
      >
        <span
          class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
          data-testid="Link-inner"
        >
          <div
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
            data-testid="Box"
          >
            Tab1
          </div>
        </span>
      </a>
    </li>
    <li
      class="_this_6f2e26 _elevation-none_6f2e26 _roundness-small_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
      data-testid="Tabs-item"
    >
      <a
        class="_this_d6c5f6 _size-large_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6 _this_ef752c _link_307da9"
        data-testid="Tabs-link"
        href="#tab2"
      >
        <span
          class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26 _inner_ef752c"
          data-testid="Link-inner"
        >
          <div
            class="_this_6f2e26 _elevation-none_6f2e26 _roundness-none_6f2e26 _gutter-medium_6f2e26 _gutterX-none_6f2e26 _gutterY-none_6f2e26"
            data-testid="Box"
          >
            Tab2
          </div>
        </span>
      </a>
    </li>
  </ul>
</div>
`;
